doc/0.9/_sources/examples/REST_duplicate_detection.rst.txt


.. _sphx_glr_examples_REST_duplicate_detection.py:


Duplicate Detection Example [REST API]
--------------------------------------

Find near-duplicates in a text collection





.. rst-class:: sphx-glr-script-out

 Out::

    0. Load the test dataset
     GET http://localhost:5001/api/v0/example-dataset/treclegal09_2k_subset

    1.a Load dataset and initalize feature extraction
     POST http://localhost:5001/api/v0/feature-extraction
       => received ['filenames', 'id']
       => dsid = 3c4d10fc32f045b8

    1.b Run feature extraction
     POST http://localhost:5001/api/v0/feature-extraction/3c4d10fc32f045b8

    1.d. check the parameters of the extracted features
     GET http://localhost:5001/api/v0/feature-extraction/3c4d10fc32f045b8
         - analyzer: word
         - binary: False
         - chunk_size: 5000
         - data_dir: ../freediscovery_shared/treclegal09_2k_subset/data
         - max_df: 0.75
         - min_df: 4.0
         - n_features: 30001
         - n_jobs: 1
         - n_samples: 2465
         - n_samples_processed: 2465
         - ngram_range: [1, 1]
         - norm: None
         - stop_words: None
         - sublinear_tf: True
         - use_hashing: False
         - use_idf: True

    2. Near Duplicates detection by cosine similarity (DBSCAN)
    POST http://localhost:5001/api/v0/lsi/
     POST http://localhost:5001/api/v0/clustering/dbscan/
         => model id = 7397f4373e424a71
     GET http://localhost:5001/api/v0/clustering/dbscan/7397f4373e424a71
        .. computed in 6.5s
    Found 320 duplicates / 2465

    3. Near Duplicates Detection using I-Match
     POST http://localhost:5001/api/v0/duplicate-detection/
         => model id = ecc930bddc3e49b3
        .. computed in 0.0s
     GET http://localhost:5001/api/v0/duplicate-detection/ecc930bddc3e49b3
        .. computed in 4.0s
    Found 376 duplicates / 2465

    3. Duplicate detection by Simhash
     POST http://localhost:5001/api/v0/duplicate-detection/
         => model id = c35fad300aa9473a
        .. computed in 0.8s
     GET http://localhost:5001/api/v0/duplicate-detection/c35fad300aa9473a
        .. computed in 1.2s
    Found 533 duplicates / 2465

    4.a Delete the extracted features
     DELETE http://localhost:5001/api/v0/feature-extraction/3c4d10fc32f045b8




|


.. code-block:: python

    from __future__ import print_function

    from time import time
    import sys
    import platform

    import numpy as np
    import pandas as pd
    import requests

    pd.options.display.float_format = '{:,.3f}'.format


    dataset_name = "treclegal09_2k_subset"     # see list of available datasets

    BASE_URL = "http://localhost:5001/api/v0"  # FreeDiscovery server URL

    print(" 0. Load the test dataset")
    url = BASE_URL + '/example-dataset/{}'.format(dataset_name)
    print(" GET", url)
    input_ds = requests.get(url).json()


    # To use a custom dataset, simply specify the following variables
    data_dir = input_ds['metadata']['data_dir']

    # # 1. Feature extraction (non hashed)

    print("\n1.a Load dataset and initalize feature extraction")
    url = BASE_URL + '/feature-extraction'
    print(" POST", url)
    fe_opts = {'data_dir': data_dir,
               'use_idf': 1, # this is required to compute cluster labels (for now)
               'n_features': 30001,
               'min_df': 4, 'max_df': 0.75
              }
    res = requests.post(url, json=fe_opts)

    dsid = res.json()['id']
    print("   => received {}".format(list(res.json().keys())))
    print("   => dsid = {}".format(dsid))


    print("\n1.b Run feature extraction")
    # progress status is available for the hashed version only
    url = BASE_URL+'/feature-extraction/{}'.format(dsid)
    print(" POST", url)
    res = requests.post(url)

    print("\n1.d. check the parameters of the extracted features")
    url = BASE_URL + '/feature-extraction/{}'.format(dsid)
    print(' GET', url)
    res = requests.get(url)

    data = res.json()
    print('\n'.join(['     - {}: {}'.format(key, val) for key, val in data.items() \
                                                      if "filenames" not in key]))


    print("\n2. Near Duplicates detection by cosine similarity (DBSCAN)")


    # compute LSI used for DBSCAN clustering
    url = BASE_URL + '/lsi/'
    print("POST", url)

    n_components = 100
    res = requests.post(url,
                        json={'n_components': n_components,
                              'parent_id': dsid
                              }).json()

    lsi_id = res['id']

    url = BASE_URL + '/clustering/dbscan/'
    print(" POST", url)
    t0 = time()
    res = requests.post(url,
            json={'parent_id': lsi_id,
                  'min_similarity': 0.90,            # 2*cosine distance for documents to be considered as duplicates
                  'n_max_samples': 2
                  }).json()

    mid  = res['id']
    print("     => model id = {}".format(mid))

    url = BASE_URL + '/clustering/dbscan/{}'.format(mid)
    print(" GET", url)
    res = requests.get(url,
            json={'n_top_words': 0, # don't compute cluster labels
                  }).json()
    t1 = time()

    print('    .. computed in {:.1f}s'.format(t1 - t0))

    data = res['data']
    print('Found {} duplicates / {}'.format(sum([len(row['documents']) for row in data \
                                                if len(row['documents']) > 1]),
                                            len(input_ds['dataset'])))


    print("\n3. Near Duplicates Detection using I-Match")

    url = BASE_URL + '/duplicate-detection/'
    print(" POST", url)
    t0 = time()
    res = requests.post(url,
            json={'parent_id': dsid,
                  'method': 'i-match',
                  }) 

    data = res.json()
    mid  = data['id']
    print("     => model id = {}".format(mid))

    print('    .. computed in {:.1f}s'.format(time() - t0))


    url = BASE_URL + '/duplicate-detection/{}'.format(mid)
    print(" GET", url)
    t0 = time()
    res = requests.get(url,
            json={'n_rand_lexicons': 10,
                  'rand_lexicon_ratio': 0.9}).json()
    t1 = time()
    print('    .. computed in {:.1f}s'.format(time() - t0))

    data = res['data']

    print('Found {} duplicates / {}'.format(sum([len(row['documents']) for row in data]),
                                            len(input_ds['dataset'])))



    if platform.system() == 'Windows':
        print('Simhash-py is currently not implemented for Windows.')
        sys.exit()

    print("\n3. Duplicate detection by Simhash")

    url = BASE_URL + '/duplicate-detection/'
    print(" POST", url)
    t0 = time()
    res = requests.post(url,
            json={'parent_id': dsid,
                  'method': 'simhash',
                  }) 

    data = res.json()
    mid  = data['id']
    print("     => model id = {}".format(mid))

    print('    .. computed in {:.1f}s'.format(time() - t0))



    url = BASE_URL + '/duplicate-detection/{}'.format(mid)
    print(" GET", url)
    t0 = time()
    res = requests.get(url,
            json={'distance': 1 })
    data = res.json()
    print('    .. computed in {:.1f}s'.format(time() - t0))

    data = data['data']

    print('Found {} duplicates / {}'.format(sum([len(row['documents']) for row in data]),
                                            len(input_ds['dataset'])))



    # 4. Cleaning
    print("\n4.a Delete the extracted features")
    url = BASE_URL + '/feature-extraction/{}'.format(dsid)
    print(" DELETE", url)
    requests.delete(url)

**Total running time of the script:** ( 0 minutes  16.933 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: REST_duplicate_detection.py <REST_duplicate_detection.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: REST_duplicate_detection.ipynb <REST_duplicate_detection.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <http://sphinx-gallery.readthedocs.io>`_
